# price-radar

./: .gitignore  PriceRadar_TZ.md  README.md  glm-4.7-flash-api-intregration.txt  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  deps.py  i18n.py  main.py  models.py  schemas.py
app/routers/: chat.py  health.py  prices.py  products.py  stores.py
app/scrapers/: __init__.py  bakuelectronics.py  base.py  browser.py  http_client.py  irshad.py  kontakt.py  registry.py  wt.py
app/services/: ai_assistant.py  ingest.py  matching.py  products.py  refresh.py  scheduler.py  ws_manager.py
frontend/: README.md  next.config.ts  package.json
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/product/[id]/: page.tsx
frontend/components/: Catalog.tsx  ChatWidget.tsx  Filters.tsx  Header.tsx  Hero.tsx  LanguageSwitcher.tsx  LivePriceToaster.tsx  Pagination.tsx  ProductCard.tsx  ProductDetail.tsx  ProductImage.tsx  Skeleton.tsx  StoreBadge.tsx  ThemeToggle.tsx
frontend/lib/: api.ts  format.ts  i18n.ts  types.ts
frontend/store/: useAppStore.ts
prompts/: DESIGN-UI-SYSTEM-prompt.md
tests/: conftest.py  test_ai_guardrails.py  test_ingest.py  test_matching.py  test_refresh.py  test_scrapers.py
tests/fixtures/: baku_category.html  baku_detail.html  irshad_category.html  irshad_detail.html  irshad_listproducts.html  kontakt_home.html  wt_category.html  wt_detail.html
